# rp2040

./: CMakeLists.txt  README.md  main.c  ram.ld  start.S
CMSIS/: CMakeLists.txt
CMSIS/Device/RaspberryPi/RP2040/Include/: system_RP2040.h
CMSIS/Device/RaspberryPi/RP2040/Source/: system_RP2040.c
core0/: CMakeLists.txt  main_core0.c  main_core0.h
core1/: CMakeLists.txt  main_core1.c  main_core1.h
driver/: CMakeLists.txt
driver/inc/: clock.h  common.h  gpio.h  reset.h  sio.h  system.h
driver/inc/reg/: clock_reg.h  gpio_reg.h  reg.h  reset_reg.h  sio_reg.h  system_reg.h
driver/src/: clock.c  gpio.c  reset.c  sio.c  system.c
